# RTOS-and-Embedded-System-Design-Task-

Central-Lib-Incubation/Device_Manager_StateMachine/: Device-Manager-And-Driver-Architecture.md  README.md
Docs/: To-Do.md
Docs/Tanya/: Engineering-Principles.md
Modules/module00-enviorment/: README.md  setup-guide
Modules/module01-debug_and_file_management/To-Do/: README.md
Modules/module01-debug_and_file_management/To-Do/daivik/: CMakeLists.txt  battery.c  main.c  sensor.c  sensor.h  system.c  system.h
Modules/module02-FreeRTOS-On-Linux/: sensor.c
Modules/module02-FreeRTOS-On-Linux/To-Do/: CMakeLists.txt
Modules/module02-FreeRTOS-On-Linux/To-Do/LibraryWala/: CMakeLists.txt  README.md  battery.h  emergency.c  emergency.h  fake_mcu.c  main.c  sensor.h  system.c
Modules/module02-FreeRTOS-On-Linux/To-Do/Nosferatu/: FreeRTOSConfig.h  fake_mcu.h  sensor.h
Modules/module02-FreeRTOS-On-Linux/To-Do/Vampire/: CMakeLists.txt  battery.c  battery.h  emergency.c  emergency.h  fake_mcu.c  main.c  sensor.c  system.c  system.h
Modules/module03-queues/To-Do/: README.md
Modules/module03-queues/To-Do/Tanya/: main.c
Modules/module03-queues/To-Do/daivik/: CMakeLists.txt  FreeRTOSConfig.h  README.md  main.c  sensor.c  sensor.h
Modules/module04-state-machines/: README.md
Modules/module04-state-machines/To-Do/: README.md  imu.c  imu.h  imu_datasheet.md  imu_demo  test
Modules/module04-state-machines/To-Do/Tanya/: README.md  Test_report.md  imu_manager.c  imu_manager.h  main.c  test.c  utils.c  utils.h
Modules/module04.1-testing-of-state-machines/: README.md
Modules/module07-Ascension/: README.md
Modules/module07-Ascension/To-Do/: README.md
Modules/module07-Ascension/To-Do/drivers/fake_encoder/: encoder.c  encoder.h
Modules/module07-Ascension/To-Do/drivers/fake_imu/: How-to-use.md  imu.c
Modules/module07-Ascension/To-Do/platform/: platform.h
include/: FreeRTOSConfig.h
